--- a/index.html
+++ b/index.html
@@ -47,13 +47,34 @@ info@devstudio.com</a></li>
 <section class="cont-about">
     <div class="container-we-doing">
         <ul class="soft">
-   <li class="about-soft-li"><h3>Увага до деталей</h3>
+   <li class="about-soft-li">
+    <div class="back-for-svg">
+    <svg width="70" height="70">
+        <use href="./images/icons.svg#icon-antenna-1-1"></use>
+    </svg>
+</div>
+    <h3>Увага до деталей</h3>
         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
-    <li class="about-soft-li"><h3>Пунктуальність</h3>
+    <li class="about-soft-li">
+        <div class="back-for-svg">
+            <svg width="70" height="70">
+                <use href="./images/icons.svg#icon-clock-1-1"></use>
+            </svg>
+        </div><h3>Пунктуальність</h3>
         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
-        <li class="about-soft-li"><h3>Планування</h3>
+        <li class="about-soft-li">
+            <div class="back-for-svg">
+                <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-diagram-1-1"></use>
+                </svg>
+            </div><h3>Планування</h3>
         <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
-        <li class="about-soft-li"> <h3>Сучасні технології</h3>
+        <li class="about-soft-li">
+            <div class="back-for-svg">
+                <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-astronaut-1-1"></use>
+                </svg>
+            </div><h3>Сучасні технології</h3>
         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </div>
@@ -75,20 +96,149 @@ info@devstudio.com</a></li>
     <div class="container-comand">
     <h2>Наша команда</h2>
     <ul class="photo-comand">
-       <li><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
+       <li class="comand-li"><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
     <div class="harakter"><h3>Ігор Дем'яненко</h3>
     <p>Product Designer</p></div>
-    </li> 
-       <li><img class="cardt" src="./images/team card 2.jpg" alt="ФОТО СОТРУДНИКА">
-        <div class="harakter"><h3>Ольга Рєпіна</h3>
-<p>Frontend Developer</p></div></li>
-       <li><img class="cardt" src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
-        <div class="harakter"><h3>Микола Тарасов</h3>
-<p>Marketing</p></div></li> 
-       <li><img class="cardt" src="./images/team card 4.jpg" alt="ФОТО СОТРУДНИКА">
-        <div class="harakter"><h3>Михайло Єрмаков</h3>
-<p>UI Designer</p></div></li>
+    <ul class="links-on-social">
+        <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+            <svg class="icon-svg-social" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram-2-1"></use>
+            </svg>
+        </a></li>
+        <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+            <svg class="icon-svg-social" width="20" height="20"> 
+                <use href="./images/icons.svg#icon-twitter-1-1"></use>
+            </svg>
+        </a></li>
+        <li class="contacts-soc-item"><a class="barbers-soc-link" href="">
+            <svg class="icon-svg-social" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook-1-1"></use>
+            </svg>
+        </a></li>
+        <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+            <svg class="icon-svg-social" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+            </svg>
+        </a></li>
+    
     </ul>
+    </li> 
+       <li class="comand-li"><img class="cardt" src="./images/team card 2.jpg" alt="ФОТО СОТРУДНИКА">
+        <div class="harakter"><h3>Ольга Рєпіна</h3>
+<p>Frontend Developer</p></div>
+<ul class="links-on-social">
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-instagram-2-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20"> 
+            <use href="./images/icons.svg#icon-twitter-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a class="barbers-soc-link" href="">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-facebook-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+        </svg>
+    </a></li>
+
+</ul></li>
+       <li class="comand-li"><img class="cardt" src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
+        <div class="harakter"><h3>Микола<br>Тарасов</h3>
+<p>Marketing</p></div>
+<ul class="links-on-social">
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-instagram-2-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20"> 
+            <use href="./images/icons.svg#icon-twitter-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a class="barbers-soc-link" href="">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-facebook-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+        </svg>
+    </a></li>
+
+</ul></li> 
+       <li class="comand-li"><img class="cardt" src="./images/team card 4.jpg" alt="ФОТО СОТРУДНИКА">
+        <div class="harakter"><h3>Михайло Єрмаков</h3>
+<p>UI Designer</p></div>
+<ul class="links-on-social">
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-instagram-2-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20"> 
+            <use href="./images/icons.svg#icon-twitter-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a class="barbers-soc-link" href="">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-facebook-1-1"></use>
+        </svg>
+    </a></li>
+    <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
+        <svg class="icon-svg-social" width="20" height="20">
+            <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+        </svg>
+    </a></li>
+
+</ul></li>
+    </ul>
+</div>
+</section>
+<section class="regular-customers">
+<div class="container-regular-customers">
+    <h2>Постійні клієнти</h2>
+<ul class="list-svg-costumers">
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-7-1"></use>
+</svg>
+</li>
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-8-1"></use>
+</svg>
+</li>
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-9-1"></use>
+</svg>
+</li>
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-10-1"></use>
+</svg>
+</li>
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-11-1"></use>
+</svg>
+</li>
+<li class="li-svg-costumers">
+    <svg class="svg-regular-costumers" width="106" height="60">
+    <use href="./images/icons.svg#icon-Logo-12-1"></use>
+</svg>
+</li>
+</ul>
 </div>
 </section>
 <footer class="footer" id="contacts">
