--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@ info@devstudio.com</a></li>
 </div>
 </section>
 <footer class="footer" id="contacts">
-    <div class="container-footer">
+    <div class="container-wrap-footer">
+        <div class="container-footer">
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
         <ul class="list-address">
@@ -251,6 +252,32 @@ info@devstudio.com</a></li>
 <li class="infor"><a class="street links-hf" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </address>
+</div>
+<div class="footer-svg-social">
+    <h4>Приєднуйтесь</h4>
+    <ul class="cont-footer-svg">
+        <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+        <use href="./images/icons.svg#icon-twitter-1-1"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+        <use href="./images/icons.svg#icon-facebook-1-1"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+        <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+    </svg>
+    </a>
+    </li>
+    </ul>
+    </div>
 </div>
 </footer>
 </body>
