--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,17 @@
         </ul>
     </nav>
     <ul class="links">
-<li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
-</ul>
+        <li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com"><svg class="svg-img-header-1" width="16" height="12">
+            <use href="./images/icons.svg#icon-envelope-hover-1"></use>
+        </svg>
+        info@devstudio.com</a></li>
+        <li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> 
+            <svg width="10" height="16" class="svg-img-header" >
+                <use href="./images/icons.svg#icon-smartphone-1"></use>
+            </svg>
+        
+            +380961111111</a></li>
+        </ul>
 </div>
     </header>
     <main class="main">
@@ -71,7 +79,8 @@
     </div>
     </main>
     <footer class="footer" id="contacts">
-        <div class="container-footer">
+        <div class="container-wrap-footer">
+            <div class="container-footer">
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
             <ul class="list-address">
@@ -80,7 +89,33 @@
     <li class="infor"><a class="street links-hf" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
-</div>
+    </div>
+    <div class="footer-svg-social">
+        <h4>Приєднуйтесь</h4>
+        <ul class="cont-footer-svg">
+            <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+            <use href="./images/icons.svg#icon-instagram-2-1"></use>
+        </svg>
+        </a>
+        </li>
+        <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+            <use href="./images/icons.svg#icon-twitter-1-1"></use>
+        </svg>
+        </a>
+        </li>
+        <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+            <use href="./images/icons.svg#icon-facebook-1-1"></use>
+        </svg>
+        </a>
+        </li>
+        <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
+            <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+        </svg>
+        </a>
+        </li>
+        </ul>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
