--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ info@devstudio.com</a></li>
     <ul class="photo-comand">
        <li class="comand-li"><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
     <div class="harakter"><h3>Ігор Дем'яненко</h3>
-    <p>Product Designer</p></div>
+    <p>Product Designer</p>
     <ul class="links-on-social">
         <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
             <svg class="icon-svg-social" width="20" height="20">
@@ -121,11 +121,12 @@ info@devstudio.com</a></li>
             </svg>
         </a></li>
     
-    </ul>
+    </ul></div>
+
     </li> 
        <li class="comand-li"><img class="cardt" src="./images/team card 2.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Ольга Рєпіна</h3>
-<p>Frontend Developer</p></div>
+<p>Frontend Developer</p>
 <ul class="links-on-social">
     <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
         <svg class="icon-svg-social" width="20" height="20">
@@ -148,10 +149,11 @@ info@devstudio.com</a></li>
         </svg>
     </a></li>
 
-</ul></li>
+</ul></div>
+</li>
        <li class="comand-li"><img class="cardt" src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Микола<br>Тарасов</h3>
-<p>Marketing</p></div>
+<p>Marketing</p>
 <ul class="links-on-social">
     <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
         <svg class="icon-svg-social" width="20" height="20">
@@ -174,10 +176,11 @@ info@devstudio.com</a></li>
         </svg>
     </a></li>
 
-</ul></li> 
+</ul></div>
+</li> 
        <li class="comand-li"><img class="cardt" src="./images/team card 4.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Михайло Єрмаков</h3>
-<p>UI Designer</p></div>
+<p>UI Designer</p>
 <ul class="links-on-social">
     <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
         <svg class="icon-svg-social" width="20" height="20">
@@ -200,7 +203,8 @@ info@devstudio.com</a></li>
         </svg>
     </a></li>
 
-</ul></li>
+</ul></div>
+</li>
     </ul>
 </div>
 </section>
@@ -209,41 +213,43 @@ info@devstudio.com</a></li>
     <h2>Постійні клієнти</h2>
 <ul class="list-svg-costumers">
 <li class="li-svg-costumers">
+    <a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-7-1"></use>
 </svg>
+</a>
 </li>
-<li class="li-svg-costumers">
+<li class="li-svg-costumers"><a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-8-1"></use>
-</svg>
+</svg></a>
 </li>
-<li class="li-svg-costumers">
+<li class="li-svg-costumers"><a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-9-1"></use>
-</svg>
+</svg></a>
 </li>
-<li class="li-svg-costumers">
+<li class="li-svg-costumers"><a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-10-1"></use>
-</svg>
+</svg></a>
 </li>
-<li class="li-svg-costumers">
+<li class="li-svg-costumers"><a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-11-1"></use>
-</svg>
+</svg></a>
 </li>
-<li class="li-svg-costumers">
+<li class="li-svg-costumers"><a href="" class="link-svg-regular-costumers">
     <svg class="svg-regular-costumers" width="106" height="60">
     <use href="./images/icons.svg#icon-Logo-12-1"></use>
-</svg>
+</svg></a>
 </li>
 </ul>
 </div>
 </section>
 <footer class="footer" id="contacts">
-    <div class="container-wrap-footer">
-        <div class="container-footer">
+    <div class="container">
+        <div>
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
         <ul class="list-address">
@@ -254,7 +260,7 @@ info@devstudio.com</a></li>
 </address>
 </div>
 <div class="footer-svg-social">
-    <h4>Приєднуйтесь</h4>
+    <p>Приєднуйтесь</p>
     <ul class="cont-footer-svg">
         <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
         <use href="./images/icons.svg#icon-instagram-2-1"></use>
