--- a/portfolio.html
+++ b/portfolio.html
@@ -47,40 +47,40 @@
             <li><button type="button" class="sorting-button button-hf">Маркетинг</button></li>
         </ul>
         <ul class="projects">
-<li><img src="./images/technokryak.jpg" alt="laptop">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/technokryak.jpg" alt="laptop">
 <div class="direction-img"><h2 class="name">Технокряк</h2>
-<p class="description">Веб-сайт</p></div></li>
-<li><img src="./images/New Orlean.jpg" alt="poster">
+<p class="description">Веб-сайт</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/New Orlean.jpg" alt="poster">
     <div class="direction-img"><h2 class="name">Постер New Orlean vs Golden Star</h2>
-    <p class="description">Дизайн</p></div></li>
-<li><img src="./images/Seafood.jpg" alt="logo">
+    <p class="description">Дизайн</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Seafood.jpg" alt="logo">
     <div class="direction-img"><h2 class="name">Ресторан Seafood</h2>
-    <p class="description">Додаток</p></div></li>
-<li><img src="./images/Prime.jpg" alt="headphones">
+    <p class="description">Додаток</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Prime.jpg" alt="headphones">
     <div class="direction-img"><h2 class="name">Проєкт Prime</h2>
-    <p class="description">Маркетинг</p></div></li>
-<li><img src="./images/Boxes.jpg" alt="2 boxes">
+    <p class="description">Маркетинг</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Boxes.jpg" alt="2 boxes">
     <div class="direction-img"><h2 class="name">Проєкт Boxes</h2>
-    <p class="description">Додаток</p></div></li>
-<li><img src="./images/Inspiration .jpg" alt="Monitor">
+    <p class="description">Додаток</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Inspiration .jpg" alt="Monitor">
     <div class="direction-img"><h2 class="name">Inspiration has no Borders</h2>
-    <p class="description">Веб-сайт</p></div></li>
-<li><img src="./images/Limited Edition .jpg" alt="book">
+    <p class="description">Веб-сайт</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Limited Edition .jpg" alt="book">
     <div class="direction-img"><h2 class="name">Видання Limited Edition</h2>
-    <p class="description">Дизайн</p></div></li>
-<li><img src="./images/LAB.jpg" alt="Label">
+    <p class="description">Дизайн</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/LAB.jpg" alt="Label">
     <div class="direction-img"><h2 class="name">Проєкт LAB</h2>
-    <p class="description">Маркетинг</p></div></li>
-<li><img src="./images/Growling Business .jpg" alt="Laptop and hands">
+    <p class="description">Маркетинг</p></div></div></a></li>
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Growling Business .jpg" alt="Laptop and hands">
     <div class="direction-img"><h2 class="name">Growing Business</h2>
-    <p class="description">Додаток</p></div>
+    <p class="description">Додаток</p></div></div></a>
 </li>
         </ul>
     </div>
     </main>
     <footer class="footer" id="contacts">
-        <div class="container-wrap-footer">
-            <div class="container-footer">
+        <div class="container">
+            <div class="">
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
             <ul class="list-address">
@@ -91,7 +91,7 @@
     </address>
     </div>
     <div class="footer-svg-social">
-        <h4>Приєднуйтесь</h4>
+        <p>Приєднуйтесь</p>
         <ul class="cont-footer-svg">
             <li class="contacts-soc-item-footer"><a href="" class="barbers-soc-link-footer"><svg class="svg-footer-link" width="20" height="20">
             <use href="./images/icons.svg#icon-instagram-2-1"></use>
