--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container-header">
+        <div class="container header-cont-center">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav class="nav">
         <ul class="navig">
@@ -39,13 +39,13 @@ info@devstudio.com</a></li>
 </div>
     </header>
 <section class="main-button">
-    <div class="container-button">
+    <div class="container main-cont-button">
 <h1>Ефективні рішення для<br>вашого бізнесу</h1>
 <button type="button">Замовити послугу</button>
 </div>
 </section>
 <section class="cont-about">
-    <div class="container-we-doing">
+    <div class="container">
         <ul class="soft">
    <li class="about-soft-li">
     <div class="back-for-svg">
@@ -80,7 +80,7 @@ info@devstudio.com</a></li>
 </div>
 </section>
 <section class="non-top-padding">
-    <div class="container-we-doing">
+    <div class="container">
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
@@ -93,7 +93,7 @@ info@devstudio.com</a></li>
 </section>
 
 <section class="comand">
-    <div class="container-comand">
+    <div class="container">
     <h2>Наша команда</h2>
     <ul class="photo-comand">
        <li class="comand-li"><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
@@ -209,7 +209,7 @@ info@devstudio.com</a></li>
 </div>
 </section>
 <section class="regular-customers">
-<div class="container-regular-customers">
+<div class="container regular-cont-costumers">
     <h2>Постійні клієнти</h2>
 <ul class="list-svg-costumers">
 <li class="li-svg-costumers">
@@ -248,7 +248,7 @@ info@devstudio.com</a></li>
 </div>
 </section>
 <footer class="footer" id="contacts">
-    <div class="container">
+    <div class="container wrap-footer">
         <div>
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
