--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-cont-center">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav class="nav">
         <ul class="navig">
@@ -79,7 +79,7 @@
     </div>
     </main>
     <footer class="footer" id="contacts">
-        <div class="container">
+        <div class="container wrap-footer">
             <div class="">
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
