--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ info@devstudio.com</a></li>
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
-       <li><img class="box-img"src="./images/box 1.jpg" alt="Робота за клавіатурою"></li> 
-       <li><img class="box-img"src="./images/box 2.jpg" alt="Телефон та ноутбук-робота"></li> 
-       <li><img class="box-img"src="./images/box 3.jpg" alt="Графічний планшет"></li> 
+       <li><img class="box-img"src="./images/box1.jpg" alt="Робота за клавіатурою"></li> 
+       <li><img class="box-img"src="./images/box2.jpg" alt="Телефон та ноутбук-робота"></li> 
+       <li><img class="box-img"src="./images/box3.jpg" alt="Графічний планшет"></li>
     </ul>
     </div>
 </div>
@@ -94,9 +94,9 @@ info@devstudio.com</a></li>
 
 <section class="comand">
     <div class="container">
-    <h2>Наша команда</h2>
+    <h2 class="all-team">Наша команда</h2>
     <ul class="photo-comand">
-       <li class="comand-li"><img class="cardt"src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
+       <li class="comand-li"><img class="cardt"src="./images/teamcard1.jpg" alt="ФОТО СОТРУДНИКА">
     <div class="harakter"><h3>Ігор Дем'яненко</h3>
     <p>Product Designer</p>
     <ul class="links-on-social">
@@ -124,7 +124,7 @@ info@devstudio.com</a></li>
     </ul></div>
 
     </li> 
-       <li class="comand-li"><img class="cardt"src="./images/team card 2.jpg" alt="ФОТО СОТРУДНИКА">
+       <li class="comand-li"><img class="cardt"src="./images/teamcard2.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Ольга Рєпіна</h3>
 <p>Frontend Developer</p>
 <ul class="links-on-social">
@@ -151,7 +151,7 @@ info@devstudio.com</a></li>
 
 </ul></div>
 </li>
-       <li class="comand-li"><img class="cardt"src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
+       <li class="comand-li"><img class="cardt"src="./images/teamcard3.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Микола Тарасов</h3>
 <p>Marketing</p>
 <ul class="links-on-social">
@@ -178,7 +178,7 @@ info@devstudio.com</a></li>
 
 </ul></div>
 </li> 
-       <li class="comand-li"><img class="cardt"src="./images/team card 4.jpg" alt="ФОТО СОТРУДНИКА">
+       <li class="comand-li"><img class="cardt"src="./images/teamcard4.jpg" alt="ФОТО СОТРУДНИКА">
         <div class="harakter"><h3>Михайло Єрмаков</h3>
 <p>UI Designer</p>
 <ul class="links-on-social">
