--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 </div>
     </header>
     <main class="main">
-        <div class="container-projects">
+        <div class="container">
         <ul class="buttons">
             <li><button type="button" class="sorting-button button-hf" >Усі</button></li>
             <li><button type="button" class="sorting-button button-hf">Веб-сайти</button></li>
@@ -50,7 +50,7 @@
 <li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/technokryak.jpg" alt="laptop">
 <div class="direction-img"><h2 class="name">Технокряк</h2>
 <p class="description">Веб-сайт</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/New Orlean.jpg" alt="poster">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/NewOrlean.jpg" alt="poster">
     <div class="direction-img"><h2 class="name">Постер New Orlean vs Golden Star</h2>
     <p class="description">Дизайн</p></div></div></a></li>
 <li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Seafood.jpg" alt="logo">
@@ -62,16 +62,16 @@
 <li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Boxes.jpg" alt="2 boxes">
     <div class="direction-img"><h2 class="name">Проєкт Boxes</h2>
     <p class="description">Додаток</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Inspiration .jpg" alt="Monitor">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Inspiration.jpg" alt="Monitor">
     <div class="direction-img"><h2 class="name">Inspiration has no Borders</h2>
     <p class="description">Веб-сайт</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Limited Edition .jpg" alt="book">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/LimitedEdition.jpg" alt="book">
     <div class="direction-img"><h2 class="name">Видання Limited Edition</h2>
     <p class="description">Дизайн</p></div></div></a></li>
 <li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/LAB.jpg" alt="Label">
     <div class="direction-img"><h2 class="name">Проєкт LAB</h2>
     <p class="description">Маркетинг</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Growling Business .jpg" alt="Laptop and hands">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/GrowlingBusiness.jpg" alt="Laptop and hands">
     <div class="direction-img"><h2 class="name">Growing Business</h2>
     <p class="description">Додаток</p></div></div></a>
 </li>
