--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ info@devstudio.com</a></li>
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
-       <li><img class="box-img"src="./images/box1.jpg" alt="Робота за клавіатурою"></li> 
-       <li><img class="box-img"src="./images/box2.jpg" alt="Телефон та ноутбук-робота"></li> 
-       <li><img class="box-img"src="./images/box3.jpg" alt="Графічний планшет"></li>
+       <li class="techno-li"><img class="box-img"src="./images/box1.jpg" alt="Робота за клавіатурою"><div class="footer-img-line"><p>Декстопні додатки</p></div></li> 
+       <li class="techno-li"><img class="box-img"src="./images/box2.jpg" alt="Телефон та ноутбук-робота"><div class="footer-img-line"><p>Мобільні додатки</p></div></li> 
+       <li class="techno-li"><img class="box-img"src="./images/box3.jpg" alt="Графічний планшет"><div class="footer-img-line"><p>Дизайнерські рішення</p></div></li>
     </ul>
     </div>
 </div>
