--- a/portfolio.html
+++ b/portfolio.html
@@ -40,38 +40,38 @@
     <main class="main">
         <div class="container">
         <ul class="buttons">
-            <li><button type="button" class="sorting-button button-hf" >Усі</button></li>
-            <li><button type="button" class="sorting-button button-hf">Веб-сайти</button></li>
-            <li><button type="button" class="sorting-button button-hf">Додатки</button></li>
-            <li><button type="button" class="sorting-button button-hf">Дизайн</button></li>
-            <li><button type="button" class="sorting-button button-hf">Маркетинг</button></li>
+            <li><button type="button" class="sorting-button" >Усі</button></li>
+            <li><button type="button" class="sorting-button">Веб-сайти</button></li>
+            <li><button type="button" class="sorting-button">Додатки</button></li>
+            <li><button type="button" class="sorting-button">Дизайн</button></li>
+            <li><button type="button" class="sorting-button">Маркетинг</button></li>
         </ul>
         <ul class="projects">
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/technokryak.jpg" alt="laptop">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates omnis culpa magnam cum reprehenderit quod nihil repudiandae excepturi, harum, quae nemo animi commodi, maiores quidem ex distinctio eveniet ut explicabo.</p></div><img src="./images/technokryak.jpg" alt="laptop"></div>
 <div class="direction-img"><h2 class="name">Технокряк</h2>
 <p class="description">Веб-сайт</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/NewOrlean.jpg" alt="poster">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic voluptates inventore doloremque praesentium facilis modi sit beatae quas odit mollitia aut, veritatis itaque sed suscipit quia perspiciatis ut magni illo.</p></div><img  src="./images/NewOrlean.jpg" alt="poster"></div>
     <div class="direction-img"><h2 class="name">Постер New Orlean vs Golden Star</h2>
     <p class="description">Дизайн</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Seafood.jpg" alt="logo">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minima voluptas asperiores quaerat totam, ducimus dignissimos necessitatibus deserunt dolor explicabo enim distinctio culpa aliquam aliquid nulla magnam odio sint recusandae!</p></div><img src="./images/Seafood.jpg" alt="logo"></div>
     <div class="direction-img"><h2 class="name">Ресторан Seafood</h2>
     <p class="description">Додаток</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Prime.jpg" alt="headphones">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ducimus adipisci magnam autem in alias. Corrupti reiciendis, suscipit fuga nam nulla facere quod hic quasi quo labore omnis debitis voluptas!</p></div><img src="./images/Prime.jpg" alt="headphones"></div>
     <div class="direction-img"><h2 class="name">Проєкт Prime</h2>
     <p class="description">Маркетинг</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Boxes.jpg" alt="2 boxes">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam tempore nostrum laboriosam, quod, in omnis inventore quae distinctio modi, praesentium commodi rem nesciunt? Cupiditate odit consequatur veniam non, tenetur fugiat?</p></div><img src="./images/Boxes.jpg" alt="2 boxes"></div>
     <div class="direction-img"><h2 class="name">Проєкт Boxes</h2>
     <p class="description">Додаток</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/Inspiration.jpg" alt="Monitor">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore numquam, quidem officia doloremque dolorem reiciendis enim autem cumque odit. Id neque pariatur dicta non maxime amet incidunt adipisci. Consectetur, quisquam.</p></div><img src="./images/Inspiration.jpg" alt="Monitor"></div>
     <div class="direction-img"><h2 class="name">Inspiration has no Borders</h2>
     <p class="description">Веб-сайт</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/LimitedEdition.jpg" alt="book">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero soluta porro impedit quisquam eum ipsam illo dolorum rem, quibusdam nam dolores dicta quas iusto harum dolor quod nihil, perspiciatis animi.</p></div><img src="./images/LimitedEdition.jpg" alt="book"></div>
     <div class="direction-img"><h2 class="name">Видання Limited Edition</h2>
     <p class="description">Дизайн</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/LAB.jpg" alt="Label">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat facilis earum, deserunt suscipit excepturi eveniet omnis, tempore ut assumenda odit! Ea vitae minus natus similique sapiente earum aspernatur placeat!</p></div><img src="./images/LAB.jpg" alt="Label"></div>
     <div class="direction-img"><h2 class="name">Проєкт LAB</h2>
     <p class="description">Маркетинг</p></div></div></a></li>
-<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><img src="./images/GrowlingBusiness.jpg" alt="Laptop and hands">
+<li><a href="" class="box-shadow-hf"><div class="cont-img-direct"><div class="blue-swipe"><div class="blue-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ullam similique ab inventore voluptatibus, ipsam maiores earum eaque dolorum dolor velit molestias nam recusandae quidem totam! Dolore est a sit?</p></div><img src="./images/GrowlingBusiness.jpg" alt="Laptop and hands"></div>
     <div class="direction-img"><h2 class="name">Growing Business</h2>
     <p class="description">Додаток</p></div></div></a>
 </li>
