--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@ info@devstudio.com</a></li>
                     <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>  
             </button>
+            <h3>Залиште свої дані, ми вам передзвонимо</h3>
+            <p>Ім'я</p>
+            <label  for=""><input class="labels" type="text"></label>
+            <p>Телефон</p>
+            <label  for=""><input class="labels" type="tel"></label>
+            <p>Пошта</p>
+            <label  for=""><input class="labels" type="email"></label>
+            <p>Коментар</p>
+            <textarea name="" id="comments" cols="30" rows="10"></textarea>
         </form>
     </div> 
     <div class="container main-cont-button">
